2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-3.patch: New file. Replace ...
	* binutils-2stage-1.patch: This. Removed.
	* README: Likewise.

2010-12-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-indirect-4.patch: New file. Replace ...
	* binutils-indirect-3.patch: This. Removed.
	* README: Likewise.

2010-12-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-1.patch: New.
	* README: Apply it.

2010-11-20  H.J. Lu  <hjl.tools@gmail.com>

	* ld-pr46319-1.patch: Removed.
	* README: Likewise.

2010-11-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11137-1.patch: Removed.
	* README: Likewise.

2010-11-10  H.J. Lu  <hjl.tools@gmail.com>

	* ld-pr46319-1.patch: New.
	* README: Apply it.

2010-10-29  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-zlib-5.patch: Removed.
	* README: Likewise.

2010-10-18  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-12.patch: New file. Replace ...
	* binutils-error-11.patch: This. Removed.
	* README: Likewise.

2010-10-01  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-signed-5.patch: New file. Replace ...
	* binutils-signed-4.patch: This.  Removed.
	* README: Likewise.

2010-09-18  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11997-1.patch: Removed.
	* README: Likewise.

2010-09-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11997-1.patch: New.
	* README: Apply it.

2010-08-30  H.J. Lu  <hjl.tools@gmail.com>

	* ld-env-11.patch: Removed.
	* ld-needed-4.patch: Likewise.
	* README: Updated.

2010-08-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11843-1.patch: Removed.
	* README: Likewise.

	* binutils-pr11137-1.patch: Correct gcc PR #.

2010-08-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-zlib-5.patch: New file. Replace ...
	* binutils-zlib-4.patch: This.  Removed.
	* README: Likewise.

2010-08-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr11843-1.patch: New.
	* README: Apply it.

2010-07-23  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-zlib-4.patch: New.
	* README: Apply it.
